# images

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/workflows/: publish.yaml
src/: lib.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: index.js
ui/src/components/: App.js  Media.js  Medias.js  SearchBar.js
