[package]
name = "images"
version = "0.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.6", features = ["derive", "env"] }
futures = "0.3.15"
futures-util = "0.3.15"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
lazy_static = "1.4.0"
mongodb = "2.1.0"
regex = "1.5.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
tempfile = "3.2.0"
tokio = "1.8.1"
